Arrumando a Responsividade do Site

--- a/pages/TelaDeCadastro.html
+++ b/pages/TelaDeCadastro.html
@@ -21,7 +21,7 @@
       <div class="underheader">
         <div id="options" class="options">
           <a href="login.html">Login</a>
-          <a href="TelaDeCadastro1.html">Cadastro</a>
+          <a href="TelaDeCadastro.html">Cadastro</a>
         </div>
       </div>
       <div class="container">
@@ -35,9 +35,9 @@
             Senha: <br>
             <input type="password" id="ipt_senha" placeholder="Senha"> <br>
             Confirmar Senha: <br>
-            <input type="password" id="ipt_senhaConfirm" placeholder="Confirmar Senha>
+            <input type="password" id="ipt_senhaConfirm" placeholder="Confirmar Senha">
             <br>
-            Chave de Acesso: <br>
+            Chave de Acesso:
             <input type="text" id="ipt_chave" placeholder="Chave de Acesso">
             <br>
             <button onclick="validarFormulario()">Cadastrar</button>
@@ -46,13 +46,13 @@
         </div>
       </div>
     </div>
-    <footer>
+    <!-- <footer>
       <div class="footer">
         <div class="container">
           <p>Feito por TransControl - SPTECH - 1CCO &copy;</p>
         </div>
       </div>
-    </footer>
+    </footer> -->
 
     <script>
       function opcaoHeader() {
