--- a/pages/TelaDeCadastroEMPRESA.html
+++ b/pages/TelaDeCadastroEMPRESA.html
@@ -21,7 +21,7 @@
       <div class="underheader">
         <div id="options" class="options">
           <a href="login.html">Login</a>
-          <a href="TelaDeCadastro1.html">Cadastro</a>
+          <a href="TelaDeCadastro.html">Cadastro</a>
         </div>
       </div>
       <div class="container">
