--- a/pages/login.html
+++ b/pages/login.html
@@ -21,7 +21,7 @@
       <div class="underheader">
         <div id="options" class="options">
           <a href="login.html">Login</a>
-          <a href="TelaDeCadastro1.html">Cadastro</a>
+          <a href="TelaDeCadastro.html">Cadastro</a>
         </div>
       </div>
       <div class="container">
@@ -31,7 +31,7 @@
           <input id="ipt_senha" type="password" placeholder="Senha" required>
           <input id="ipt_confirmaSenha" type="password" placeholder="Confirme a senha" required>
           <button id="botaoEnviar" onclick="validarFormulario()">Entrar</button>
-          <a href="TelaDeCadastro1.html" class="link">Ainda não tem login?</a>
+          <a href="TelaDeCadastro.html" class="link">Ainda não tem login?</a>
         </div>
       </div>
     </div>
@@ -82,7 +82,7 @@
         }
 
         alert("Login realizado com sucesso!");
-        window.location.href = "index.html";
+        window.location.href = "../dashboard/mainPage.html";
 
         return true;
       }
