Arrumando o Login e o Header do Simulador

--- a/Calculadora Financeiraa/Calculadora/calculadora.html
+++ b/Calculadora Financeiraa/Calculadora/calculadora.html
@@ -4,17 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simulador Financeiro</title>
+    <title>TransControl | Simulador Financeiro</title>
     <link rel="stylesheet" href="calculadora.css">
+    <link rel="shortcut icon" href="../../img/LogoSEMescrita.png" type="image/x-icon">
     <link rel="icon" type="image/x-icon" href="img/icon.svg">
 </head>
 
 <body>
     <header>
-        <img src="logo.png" alt="">
+        <a href="../../pages/index.html"><img src="logo.png" alt="Logo da Empresa"></a>
         <div class="itemsHeader">
-            <h4>INICIO</h4>
-            <h4>SOBRE NÓS</h4>
+            <h4><a href="../../pages/index.html">Início</a></h4>
+            <h4><a href="../../pages/index.html#sobre-nos">Sobre nós</a></h4>
+            <h4><a href="calculadora.html">Simulador Financeiro</a></h4>
             <h4>||</h4>
             <button class="botao" onclick="opcaoHeader()"></button>
             <div id="options" style="left: 94%;" class="options">
