--- a/pages/TelaDeCadastro.html
+++ b/pages/TelaDeCadastro.html
@@ -13,6 +13,7 @@
       <div class="itemsHeader">
         <h4><a href="index.html">Início</a></h4>
         <h4><a href="index.html#sobre-nos">Sobre Nós</a></h4>
+        <h4><a href="../Calculadora Financeiraa/Calculadora/calculadora.html">Simulador Financeiro</a></h4>
         <h4>||</h4>
         <buttonn class="botao" onclick="opcaoHeader()"></buttonn>
       </div>
