--- a/pages/login.html
+++ b/pages/login.html
@@ -13,6 +13,7 @@
       <div class="itemsHeader">
         <h4><a href="index.html">Início</a></h4>
         <h4><a href="index.html#sobre-nos">Sobre Nós</a></h4>
+        <h4><a href="../Calculadora Financeiraa/Calculadora/calculadora.html">Simulador Financeiro</a></h4>
         <h4>||</h4>
         <buttonn class="botao" onclick="opcaoHeader()"></buttonn>
       </div>
@@ -59,19 +60,21 @@
         var senha = ipt_senha.value
 
         var erro = false
-        var emailPadrao = 'murilo@gmail.com'
-        var senhaPadrao = '@Murilo1234'
+        var emailPadrao = 'fernando@gmail.com'
+        var senhaPadrao = '@Fernando1234'
         tentativas++
 
         for (var i = 0; i < maxTentativas; i++) {
           if (email != emailPadrao) {
             if (tentativas === maxTentativas) {
               desabilitarFormulario();
+              return false
             }
             erro = true
           } else if (senha !== senhaPadrao) {
             if (tentativas === maxTentativas) {
               desabilitarFormulario();
+              return false
             }
             erro = true;
           }
