Linkando o Simulador com o Login e Cadastro

--- a/Calculadora Financeiraa/Calculadora/calculadora.html
+++ b/Calculadora Financeiraa/Calculadora/calculadora.html
@@ -20,9 +20,8 @@
             <h4>||</h4>
             <button class="botao" onclick="opcaoHeader()"></button>
             <div id="options" style="left: 94%;" class="options">
-              <a href="#">Perfil</a>
-              <a href="#">Configurações</a>
-              <a href="#">Sair</a>
+              <a href="../../pages/login.html">Login</a>
+              <a href="../../pages/TelaDeCadastro.html">Cadastro</a>
             </div>
         </div>
     </header><br><br><br><br>
