Atualização dos títulos do Dashboard

--- a/dashboard/emergencia.html
+++ b/dashboard/emergencia.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard - Main page</title>
+    <title>Dashboard - Emergência</title>
     <link rel="stylesheet" href="dashboard.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
