Links de inicio/Sobre Nós no dashboard

--- a/dashboard/mainPage.html
+++ b/dashboard/mainPage.html
@@ -53,8 +53,8 @@
                 <header>
                     
                     <div class="itemsHeader">
-                        <h4>INICIO</h4>
-                        <h4>SOBRE NÓS</h4>
+                        <h4><a href="../pages/index.html">INICIO</a></h4>
+                        <h4><a href="../pages/index.html#sobre-nos">SOBRE NÓS</a></h4>
                         <h4>||</h4>
                         <button class="botao" onclick="opcaoHeader()"></button>
                         <div id="options" style="left: 94%;" class="options">
