--- a/pages/index.html
+++ b/pages/index.html
@@ -64,6 +64,7 @@
       <h1 class="titulo-sobreNos">Sobre Nós</h1>
       <div class="container">
         <div class="card">
+          <img src="../img/3.png" alt="Icone" class="card-imagem">
           <h2>Nossa Missão</h2>
           <p>
             Nossa missão é oferecer soluções tecnológicas avançadas que permitam
@@ -72,6 +73,7 @@
           </p>
         </div>
         <div class="card">
+          <img src="../img/2.png" alt="Icone" class="card-imagem">
           <h2>Nossa Visão</h2>
           <p>
             Nossa visão é ser líder no mercado de soluções para transporte
@@ -80,6 +82,7 @@
           </p>
         </div>
         <div class="card nossos-valores">
+          <img src="../img/1.png" alt="Icone" class="card-imagem estrela">
           <h2>Nossos Valores</h2>
           <ul>
             <li>
