--- a/dashboard/mainPage.html
+++ b/dashboard/mainPage.html
@@ -17,35 +17,35 @@
                 <img src="../dashboard/img/logo.png" alt="">
             </div>
 
-            <!-- Botão "Main page" -->
-            <button class="botaoSidebar">
-                <img src="../dashboard/img/mainPage.png">
-                <div class="h3"><h3>Main page</h3></div>
-            </button>
+           <!-- Botão "Main page" -->
+           <button class="botaoSidebar" onclick="window.location.href='mainPage.html'">
+            <img src="../dashboard/img/mainPage.png">
+            <div class="h3"><h3>Main page</h3></div>
+        </button>
 
-            <!-- Botão "Teste1" -->
-            <button class="botaoSidebar" onclick="window.location.href='fluxos.html'">
-                <img src="../dashboard/img/mainPage.png">
-                 <div class="h3"><h3>Fluxos</h3></div>
-            </button>
+        <!-- Botão "Teste1" -->
+        <button class="botaoSidebar" onclick="window.location.href='fluxos.html'">
+            <img src="../dashboard/img/mainPage.png">
+            <div class="h3"><h3>Fluxos</h3></div>
+        </button>
 
-            <!-- Botão "Teste2" -->
-            <button class="botaoSidebar" onclick="window.location.href='metricas.html'">
-                <img src="../dashboard/img/mainPage.png">
-                 <div class="h3"><h3>Métricas</h3></div>
-            </button>
+        <!-- Botão "Teste2" -->
+        <button class="botaoSidebar" onclick="window.location.href='metricas.html'">
+            <img src="../dashboard/img/mainPage.png">
+            <div class="h3"><h3>Métricas</h3></div>
+        </button>
 
-            <!-- Botão "Teste3" -->
-            <button class="botaoSidebar" onclick="window.location.href='emergencia.html'">
-                <img src="../dashboard/img/mainPage.png">
-                <div class="h3"><h3>Emergência</h3></div>
-            </button>
+        <!-- Botão "Teste3" -->
+        <button class="botaoSidebar" onclick="window.location.href='emergencia.html'">
+            <img src="../dashboard/img/mainPage.png">
+            <div class="h3"><h3>Emergência</h3></div>
+        </button>
 
-            <!-- Botão "Teste4" -->
-            <button class="botaoSidebar">
-                <img src="../dashboard/img/mainPage.png">
-                 <div class="h3"><h3>Em breve</h3></div>
-            </button>
+        <!-- Botão "Teste4" -->
+        <button class="botaoSidebar">
+            <img src="../dashboard/img/mainPage.png">
+            <div class="h3"><h3>Longo prazo</h3></div>
+        </button>
 
         </div>
         <div class="content">
