--- a/dashboard/metricas.html
+++ b/dashboard/metricas.html
@@ -43,9 +43,9 @@
                 </button>
 
                 <!-- Botão "Teste4" -->
-                <button class="botaoSidebar">
+                <button class="botaoSidebar" onclick="window.location.href='longoPrazo.html'">
                     <img src="../dashboard/img/mainPage.png">
-                    <div class="h3"><h3>Em breve</h3></div>
+                    <div class="h3"><h3>Longo prazo</h3></div>
                 </button>
 
 
@@ -73,12 +73,12 @@
                 <div class="container_api">
                     <!-- <div class="h2"><h2>DADOS SEMESTRAIS</h2></div> -->
                 <div class="grafico">
-                    <div class="h2"><h2 style="color: white;">Métrica de Janeiro - 2024</h2></div>
+                    <div class="h2"><h2 style="color: white;">Métrica diária</h2></div>
                     <canvas id="myChart"></canvas>
                 </div>
 
                 <div class="grafico">
-                  <div class="h2"><h2 style="color: white;">Métrica de fevereiro - 2024</h2></div>
+                  <div class="h2"><h2 style="color: white;">Métrica semanal</h2></div>
                     <canvas id="GrafLinha"></canvas>
                 </div>
 
@@ -112,7 +112,7 @@ elementos.forEach(elemento => {
             
             labels: ['Sem 1', 'Sem 2', 'Sem 3', 'Sem 4'],
             datasets: [{
-                label: '# of Votes',
+                label: 'Registro diário',
                 data: [12, 19, 3, 5],
                 borderWidth: 2,
                 backgroundColor: gradient,
@@ -133,52 +133,68 @@ elementos.forEach(elemento => {
     });
 });
 
-// GRÁFICO DE LINHA!!!!!!!!!!!!!!!!
+// GRÁFICO DE LINHA QUE ESTÁ ACIMA DO ESPERADO (GRÁFICO 2)
     var contextoGrafLinha = document.getElementById('GrafLinha').getContext('2d');
 
-var GrafLinha = new Chart(
+    var GrafLinha = new Chart(
     contextoGrafLinha,
     {
         type: 'line',
         data: {
             labels: ['Sem 1', 'Sem 2', 'Sem 3', 'Sem 4'],
-            datasets: [{
-                label: 'Dados',
-                data: [20, 22, 24, 26],
-                borderColor: '#ffd902',
-                backgroundColor: '#ffe135',
-                pointRadius: 5, // Tamanho dos pontos no gráfico
-                pointBackgroundColor: '#ffd902', // Cor dos pontos
-                pointBorderColor: '#fff', // Cor da borda dos pontos
-                pointHoverRadius: 7, // Tamanho dos pontos ao passar o mouse
-                pointHoverBackgroundColor: '#fff', // Cor de fundo dos pontos ao passar o mouse
-                pointHoverBorderColor: '#ffd902', // Cor da borda dos pontos ao passar o mouse
-                pointHitRadius: 10, // Raio de detecção do mouse para os pontos
-                pointBorderWidth: 2 // Largura da borda dos pontos
-            }]
+            datasets: [
+                {
+                    label: 'Dados registrados',
+                    data: [1000, 1300, 2800, 1500, 2200, 1200, 800],
+                    borderColor: '#ffd902',
+                    backgroundColor: '#ffe135',
+                    pointRadius: 5,
+                    pointBackgroundColor: '#ffd902',
+                    pointBorderColor: '#fff',
+                    pointHoverRadius: 7,
+                    pointHoverBackgroundColor: '#fff',
+                    pointHoverBorderColor: '#ffd902',
+                    pointHitRadius: 10,
+                    pointBorderWidth: 2
+                },
+                {
+                    label: 'Dados mínimos',
+                    data: [1000, 1000, 1000, 1000], // Segunda série de dados
+                    borderColor: '#00ccff', // Cor da borda da segunda linha
+                    backgroundColor: '#66d9ff', // Cor de fundo da segunda linha
+                    pointRadius: 5,
+                    pointBackgroundColor: '#00ccff',
+                    pointBorderColor: '#fff',
+                    pointHoverRadius: 7,
+                    pointHoverBackgroundColor: '#fff',
+                    pointHoverBorderColor: '#00ccff',
+                    pointHitRadius: 10,
+                    pointBorderWidth: 2
+                }
+            ],
         },
         options: {
-                xAxes: [{
-                    distribution: 'series',
-                    ticks: {
-                        beginAtZero: true
-                    }
-                }],
-                yAxes: [{
-                    scaleLabel: {
-                        display: true
-                    },
-                    ticks: {
-                        beginAtZero: true
-                    }
-                }]
-            },
-            animation: {
-                duration: 1
-            }
+            xAxes: [{
+                distribution: 'series',
+                ticks: {
+                    beginAtZero: true
+                }
+            }],
+            yAxes: [{
+                scaleLabel: {
+                    display: true
+                },
+                ticks: {
+                    beginAtZero: true
+                }
+            }]
+        },
+        animation: {
+            duration: 1
         }
-    
+    }
 );
+
 
   </script>
 
@@ -210,8 +226,8 @@ var GrafLinha2 = new Chart(
         data: {
             labels: ['Sem 1', 'Sem 2', 'Sem 3', 'Sem 4'],
             datasets: [{
-                label: 'Dados',
-                data: [20, 23, 12, 15],
+                label: 'Dados registrados',
+                data: [40000, 55000, 30000, 43000],
                 borderColor: '#ffd902',
                 backgroundColor: '#ffe135',
                 pointRadius: 5, // Tamanho dos pontos no gráfico
@@ -222,6 +238,19 @@ var GrafLinha2 = new Chart(
                 pointHoverBorderColor: '#ffd902', // Cor da borda dos pontos ao passar o mouse
                 pointHitRadius: 10, // Raio de detecção do mouse para os pontos
                 pointBorderWidth: 2 // Largura da borda dos pontos
+            },
+            {
+                label: 'Dados mínimos',
+                    data: [50000, 50000, 50000, 50000],
+                    borderColor: '#00ccff',
+                    backgroundColor: '#66d9ff',
+                    pointRadius: 5,
+                    pointBackgroundColor: '#00ccff',
+                    pointBorderColor: '#fff',
+                    pointHoverRadius: 7,
+                    pointHoverBackgroundColor: '#fff',
+                    pointHoverBorderColor: '#00ccff',
+                    pointHitRadius: 10
             }]
         },
         options: {
