--- a/API-Web-Data-Viz/public/dashboard/emergencia.html
+++ b/API-Web-Data-Viz/public/dashboard/emergencia.html
@@ -99,7 +99,7 @@
 
 					<div class="grafico2">
 						<div class="h2">
-							<h2 style="color: white;">Métrica de março - 2024</h2>
+							<h2 style="color: white;">Fluxo semanal - Linha 104</h2>
 						</div>
 						<canvas id="GrafLinha2"></canvas>
 					</div>
