--- a/API-Web-Data-Viz/public/dashboard/longoPrazo.html
+++ b/API-Web-Data-Viz/public/dashboard/longoPrazo.html
@@ -99,7 +99,7 @@
 
 					<div class="grafico2">
 						<div class="h2">
-							<h2 style="color: white;">Métrica de Janeiro - 2023</h2>
+							<h2 style="color: white;">Fluxo mensal linha 104 Janeiro - 2023</h2>
 						</div>
 						<canvas id="GrafLinha2"></canvas>
 					</div>
