--- a/API-Web-Data-Viz/public/dashboard/mainPage.html
+++ b/API-Web-Data-Viz/public/dashboard/mainPage.html
@@ -111,10 +111,13 @@
 
 				<!-- DIVS DOS ALERTAS -->
 				<div class="alertas">
-					<div class="emergencia" onclick="window.location.href='emergencia.html'"></div>
+					<div class="emergencia" onclick="window.location.href='emergencia.html'">
+					<div class="divAlertText">Emergência: 2 </div></div>
 					<!-- Alerta vermelho -->
-					<div class="atencao"></div> <!-- Alerta amarelo -->
-					<div class="tudoBem"></div> <!-- Alerta verde -->
+					<div class="atencao">
+						<div class="divAlertText">Atenção: 2 </div>
+					</div> <!-- Alerta amarelo -->
+					
 				</div>
 			</div>
 		</div>
