[Ajuste] Tela index, login e cadastro

--- a/API-Web-Data-Viz/public/index.html
+++ b/API-Web-Data-Viz/public/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <a href="index.html"><img src="../img/LogoSEMescrita.png" alt="Logo da Empresa"></a>
+      <a href="index.html"><img src="../public/css/img/LogoSEMescrita.png" alt="Logo da Empresa"></a>
       <div class="itemsHeader">
         <h4><a href="index.html">Início</a></h4>
         <h4><a href="index.html#sobre-nos">Sobre Nós</a></h4>
@@ -64,7 +64,7 @@
       <h1 class="titulo-sobreNos">Sobre Nós</h1>
       <div class="container">
         <div class="card">
-          <img src="../img/3.png" alt="Icone" class="card-imagem">
+          <img src="../public/css/img/3.png" alt="Icone" class="card-imagem">
           <h2>Nossa Missão</h2>
           <p>
             Nossa missão é oferecer soluções tecnológicas avançadas que permitam
@@ -73,7 +73,7 @@
           </p>
         </div>
         <div class="card">
-          <img src="../img/2.png" alt="Icone" class="card-imagem">
+          <img src="../public/css/img/2.png" alt="Icone" class="card-imagem">
           <h2>Nossa Visão</h2>
           <p>
             Nossa visão é ser líder no mercado de soluções para transporte
@@ -82,7 +82,7 @@
           </p>
         </div>
         <div class="card nossos-valores">
-          <img src="../img/1.png" alt="Icone" class="card-imagem estrela">
+          <img src="../public/css/img/1.png" alt="Icone" class="card-imagem">
           <h2>Nossos Valores</h2>
           <ul>
             <li>
