--- a/API-Web-Data-Viz/public/TelaDeCadastro.html
+++ b/API-Web-Data-Viz/public/TelaDeCadastro.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="./js/sessao.js"></script>
-  <link rel="stylesheet" href="./css/Cadastro1.css">
+  <link rel="stylesheet" href="./css/login.css">
   <link rel="shortcut icon" href="./css/img/LogoSEMescrita.png" type="image/x-icon">
   <title>TransControl | Cadastro Cliente</title>
 </head>
@@ -38,20 +38,19 @@
         <h2>Cadastro</h2>
         <div id="cadastroForm">
           Empresa: <br>
-          <select name="Empresas" id="listaEmpresas">
+          <select style="width: 100%;" name="Empresas" id="listaEmpresas">
             <option selected>Selecione uma empresa</option>
-          </select>
-          <br> <br>
-          Nome: <br> 
-          <input type="text" id="ipt_nome" placeholder="Nome"> <br>
-          Email: <br>
-          <input type="email" id="ipt_email" placeholder="Email"> <br>
-          Senha: <br>
-          <input type="password" id="ipt_senha" placeholder="Senha"> <br>
-          Confirmar Senha: <br>
-          <input type="password" id="ipt_senhaConfirm" placeholder="Confirmar Senha">
+          </select> 
+          Nome: 
+          <input type="text" id="ipt_nome" placeholder="Nome"> 
+          Email:
+          <input type="email" id="ipt_email" placeholder="Email"> 
+          Senha: 
+          <input type="password" id="ipt_senha" placeholder="Senha"> 
+          Confirmar Senha:
+          <input type="password" id="ipt_senhaConfirm" placeholder="Confirmar Senha"> 
           <br>
-          <button onclick="cadastrar()">Cadastrar</button>
+          <button class="buttonCadastrar" onclick="cadastrar()">Cadastrar</button>
         </div>
         <div id="div_aguardar" class="loading-div">
           <img src="./assets/circle-loading.gif" id="loading-gif">
@@ -60,13 +59,14 @@
         </div>
     </div>
   </div>
-  <!-- <footer>
-      <div class="footer">
-        <div class="container">
-          <p>Feito por TransControl - SPTECH - 1CCO &copy;</p>
-        </div>
+
+  <footer>
+    <div class="footer">
+      <div class="container">
+        <p>Feito por TransControl - SPTECH - 1CCO &copy;</p>
       </div>
-    </footer> -->
+    </div>
+  </footer>
 
   <script>
     function opcaoHeader() {
