--- a/API-Web-Data-Viz/public/login.html
+++ b/API-Web-Data-Viz/public/login.html
@@ -12,7 +12,7 @@
 
 <body>
   <header>
-    <a href="index.html"><img src="./css/img/LogoSEMescrita.png"" alt="Logo da Empresa" ></a>
+    <a href="index.html"><img src="./css/img/LogoSEMescrita.png" alt="Logo da Empresa" ></a>
     <div class="itemsHeader">
       <h4><a href="index.html">Início</a></h4>
       <h4><a href="index.html#sobre-nos">Sobre Nós</a></h4>
